overflow for pictures, fixed pagination and do hover

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   width: 1062px;
   margin: 0 auto;
 }
+
 .community {
   background-color: #C4C4C4;
   height: 504px;
@@ -27,6 +28,7 @@ body {
   width: 298px;
   text-align: center;
   margin: 0 139px 0 0px;
+  flex-shrink: 0;
 }
 
 h3{
@@ -42,19 +44,29 @@ h3{
   color: #4E4E4E;
 }
 
-.slider-nav {
+.images {
   display: flex;
-  /*  */
-  
+  overflow: hidden;
+  align-items: flex-end;
+}
+
+.images img {
+  margin: auto 30px 0 auto;
+}
+
+.slider-nav{
+  display: flex;
+  margin: 0 0 20px 0;
 }
 
 .slider-nav .hover:hover {
   opacity: 0.5;
 }
+
 .slider-image{
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  overflow: visible;
+  align-items: center;
+  margin: 82px 0 0 0;
 }
 
